--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-16  Marek Michalkiewicz  <marekm@amelek.gda.pl>
+
+	* hard-reg-set.h (TEST_HARD_REG_BIT): Return 1 if the bit is set.
+
 2002-07-15  Zack Weinberg  <zack@codesourcery.com>
 
 	* ginclude/varargs.h: Replace with stub which issues #error.
