--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Tue Jul 16 12:22:44 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (prefetch): Fix for 64bit mode.
+	(prefetch_sse_rex, prefetch_3dnow_rex): New patterns.
+
+	* i386.md (movss, movsd): Use xorps/xorpd for Athlon.
+
 2002-07-16  Marek Michalkiewicz  <marekm@amelek.gda.pl>
 
 	* hard-reg-set.h (TEST_HARD_REG_BIT): Return 1 if the bit is set.
