--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-16  Andreas Schwab  <schwab@suse.de>
+
+	* libsupc++/new (set_new_handler): Declare to not throw any
+	exceptions.
+	* libsupc++/new_handler.cc (set_new_handler): Likewise.
+
 2002-07-15  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/os/solaris/solaris2.5/bits/ctype_base.h (ctype_base): Fix
