--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-16  Mark Wielaard  <mark@klomp.org>
+
+	* java/io/StreamTokenizer.java (pushBack): Update documentation.
+	(whitespaceChars): call resetChar().
+
 2002-07-15  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in: Rebuilt.
