--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-16  H.J. Lu <hjl@gnu.org>
+
+	* gcc_update (touch_files): Pass -s to ${MAKE}.
+
 2002-06-26  Zack Weinberg  <zack@codesourcery.com>
 
 	* texi2pod.pl: Correct handling of the internal R<> sequence.
