--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-16  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* enquire.c: Move from gcc.
+
 2002-07-16  H.J. Lu <hjl@gnu.org>
 
 	* gcc_update (touch_files): Pass -s to ${MAKE}.
